hash based database